--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,11 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+
+# Log files
+.FedFitTech/Flower_log
+.FedFitTech/Early_stopping_logs
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
