--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 scikit-learn==1.6.1
-flwr==1.18.0
 scikit-learn==1.6.1
 pandas==2.2.3
 scikit-learn==1.6.1
@@ -9,3 +8,4 @@ joblib==1.4.2
 seaborn==0.13.2
 plotly==6.0.0
 einops==0.8.0
+omegaconf==2.3.0
